app/assets/sass/components/_case-discussion.scss
.case-discussion {

	margin-top: 10px;
	h1,
	h2,
	h3,
	h4 {
		font-weight: 600;
		margin: 0;
		text-transform: none;
	}

	.discussion-element{
		margin-top: 10px;
	}
	textarea.comment {
	    margin-bottom: 15px;
	}
	.comment {
		textarea { min-height: 250px; }
		& + .comment { @include rem('margin-top', 5px); }
//		.meta { @include rem('margin-bottom', $global-padding); }
		.comment { @include rem('padding-left', 28px); }
		.private { color: red; }
		blockquote { margin-bottom: 0; }
	}

	.tab-pane { padding: 0; }

	article {
		position: relative;
		@include rem('padding', $global-padding $global-margin);
		border-top: 1px solid #D3D3D3;
		border-right: 1px solid #D3D3D3;
		border-bottom: 1px solid #D3D3D3;
		border-left: 4px solid #ddd;
		font-family: monospace;

		i {
			position: absolute;
			left: -18px;
			top: 14px;
			width: 34px;
			height: 34px;
			background: #ddd;
			@include font-size(18px);
			line-height: 1.7;
			color: #fff;
			text-align: center;
			@include border-radius(50%);
		}

		& + article { @include rem('margin-top', $global-margin); }

		.reply {
			font-family: 'Overpass';
			font-size: 12px;
			overflow: hidden;
			padding-top: 10px;
		}

		.vote-buttons {
			display: inline-block;
			font-size: 14px;
			a {
				border: 1px solid #D1D1D1;
				color: #252525;
				display: inline-block;
				line-height: 1.125rem;
				padding: .5rem .75rem;
		    transition: .2s ease-in;
				&.active {
					background: #FAFAFA;
					color: #3f9c35;
				}
				+ a {
					margin-left: -1px;
					&.active {
						color: #C00;
					}
				}
				&:hover {
					text-decoration: none;
				}
			}

		}
	}

	.article-comment {
		background: #fff;
		border-left-color: #0a89cf;

		i { background-color: #0889cf; }
		.meta { color: #0889cf; }
	}

	.article-private-comment {
		background: #dae0e3;
		border-left-color: #37424a;

		i { background-color: #37424a; }
		.meta { color: #37424a; }
	}

    .article-external-updates {
        background: #e6e6fa;
        border-left-color: #8a2be2;

        i { background-color: #8a2be2; }
    }

	.article-attachment {
		background: #fff;
		border-left-color: #0889cf;

		i { background-color: #06bae2; }
		.meta { color: #06bae2; }
	}

	.article-chat {
		border-left-color: #1b6c36;

		i { background-color: #24A552; }
		.meta { color: #24A552; }
	}

	article {

		h4 {
			@include rem('margin-bottom', 4px);
			text-transform: uppercase;
			@include font-size(13px);
			font-size: 13px;
			line-height: 1;
			font-weight: 700;
		}
	}

	.byline {
		font-family: 'Overpass';
		font-weight: 700;
		@include font-size(13px);
		font-size: 13px;
		line-height: 1;
		@include rem('margin-bottom', 5px);
	}

	.article-private-comment, .article-comment, .article-attachment {
//		display: none;
	}

    .label {
        display: block;
        padding: 0;
        font-weight: 700;
        text-align: left;
        @include font-size(13px);
        color: $base_font_color;
    }

    a.disabled {
		pointer-events: none;
		cursor: default;
		color: #8d8d8d;
	}
}

.attachment-list {
	.attachment-header {
		display: inline-flex;
		width: 100%;
		flex-wrap: wrap;
	}
	.attachment-name {
		margin-right: 10px;
	}
	.attachment-progress {
		flex:1;
		min-width: 150px;
	}
	.attachment-remove {
		margin-left: 5px;
	}
}

.disable-span-text {
    color: #808080;
    padding: 10px;
}

.label-contact {
    display: inline-block;
    background: #4c4c4c;
    color: #f0f0f0;
    padding: 2px 5px;
    margin-bottom: 5px;
    margin-right: 5px;
    a {
        color: #f0f0f0;
        margin-left: 3px;
    }
    &.label-disabled {
        background: #8c8c8c;
    }
}

.edit-emailNotify-Container {
    border: 1px solid #ccc;
    padding: 2px;
    padding-top: 5px;
    min-height: 37px;
}

.case-summary-text {
    width: 100%;
    height: 70px;
    max-width: 100%;
    background-color: #ffd1d1;
}

.warning-text {
    color: red;
    font-style: italic;
}

